c
  File "<string>", line 29
    elif c == '{': depwith open('/      lines = f.readlines()
                           ^
SyntaxError: invalid syntax
  File "<string>", line 29
    elif c == '{': depwith open('/      lines = f.readlines()
                           ^
SyntaxError: invalid syntax
